--- a/scripts/regression_test/extension_regression_test.yml
+++ b/scripts/regression_test/extension_regression_test.yml
@@ -86,7 +86,7 @@ jobs:
       inlineScript: |
         set -ev
         pwd
-        if [[ -n "$(CUSTOM_CLI_REPO)" && -n "$(CUSTOM_CLI_BRANCH)"]]; then
+        if [[ -n "$(CUSTOM_CLI_REPO)" && -n "$(CUSTOM_CLI_BRANCH)" ]]; then
           git remote add ${CUSTOM_CLI_REPO} https://github.com/${CUSTOM_CLI_REPO}/azure-cli.git
           git fetch ${CUSTOM_CLI_REPO} $(CUSTOM_CLI_BRANCH)
 
@@ -152,7 +152,7 @@ jobs:
 - job: ResultSummary
   displayName: CLI Extension Regression Test Result Summary
   dependsOn: CLIExtensionRegressionTest
-  condition: succeededOrFailed()
+  condition: and(succeededOrFailed(), eq(variables['CUSTOM_CLI_REPO'], ''))
   pool:
     name: ${{ variables.ubuntu_pool }}
   steps:
