checkout cli custom repo

--- a/scripts/regression_test/extension_regression_test.yml
+++ b/scripts/regression_test/extension_regression_test.yml
@@ -90,7 +90,7 @@ jobs:
           git remote add ${CUSTOM_CLI_REPO} https://github.com/${CUSTOM_CLI_REPO}/azure-cli.git
           git fetch ${CUSTOM_CLI_REPO} $(CUSTOM_CLI_BRANCH)
 
-          git checkout -b ${GITHUB_BRANCH} ${GITHUB_REPO}/${GITHUB_BRANCH}
+          git checkout -b ${CUSTOM_CLI_BRANCH} ${CUSTOM_CLI_REPO}/${CUSTOM_CLI_BRANCH}
         fi
         git clone https://github.com/Azure/azure-cli-extensions.git
         cd azure-cli-extensions
