--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -34,6 +34,8 @@ steps:
       versionSpec: ${{ parameters.pythonVersion }}
       displayName: "Use Python ${{ parameters.pythonVersion }}"
   - template: ./azdev_setup.yml
+    parameters:
+      EnableCompactAAZ: true
   - bash: |
       set -ev
 
