--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -377,6 +377,9 @@ jobs:
         # az login --service-principal --username $(APP_ID) --password $(PASSWORD) --tenant $(TENANT_ID)
         az login -u azureclilivetest@azuresdkteam.onmicrosoft.com -p $(AZURECLITESTPASSWORD)
         az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
+        
+        # Compact aaz folders of modules
+        python /mnt/vss/_work/1/s/scripts/compact_aaz.py
 
         # Clean resources
         python /mnt/vss/_work/1/s/scripts/live_test/clean_policy.py
