--- a/.github/azure-client-tools-bot/config.yml
+++ b/.github/azure-client-tools-bot/config.yml
@@ -1,3 +1,7 @@
+auto_choose_milestone:
+  enable: True
+  issue_expected_days: 7
+  pr_expected_days: 7
 pull_request:
   comment:
     - azure_pipeline:
