--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -22,6 +22,7 @@ variables:
 #    - CLITest
 #  always: true
 
+# https://stackoverflow.com/questions/54372758/azure-devops-yaml-pipelines-specification-of-matrix-through-build-variable
 jobs:
 - job: LiveTestPython38
   displayName: Live Test Python 3.8
@@ -73,6 +74,8 @@ jobs:
         Target: cosmosdb
       databoxedge:
         Target: databoxedge
+      deploymentmanager:
+        Target: deploymentmanager
       dla:
         Target: dla
       dls:
@@ -133,6 +136,8 @@ jobs:
         Target: security
       servicebus:
         Target: servicebus
+      serviceconnector:
+        Target: serviceconnector
       servicefabric:
         Target: servicefabric
       signalr:
@@ -151,6 +156,10 @@ jobs:
         Target: vm
       ext-account:
         Target: ext-account
+      ext-acrtransfer:
+        Target: ext-acrtransfer
+      ext-ad:
+        Target: ext-ad
       ext-aem:
         Target: ext-aem
       ext-ai-examples:
@@ -161,14 +170,18 @@ jobs:
         Target: ext-alertsmanagement
       ext-alias:
         Target: ext-alias
+      ext-amg:
+        Target: ext-amg
       ext-application-insights:
         Target: ext-application-insights
+      ext-appservice-kube:
+        Target: ext-appservice-kube
       ext-attestation:
         Target: ext-attestation
+      ext-authV2:
+        Target: ext-authV2
       ext-azure-batch-cli-extensions:
         Target: ext-azure-batch-cli-extensions
-      ext-azure-cli-iot-ext:
-        Target: ext-azure-cli-iot-ext
       ext-azure-cli-ml:
         Target: ext-azure-cli-ml
       ext-azure-devops:
@@ -181,12 +194,32 @@ jobs:
         Target: ext-blockchain
       ext-blueprint:
         Target: ext-blueprint
-      ext-codespaces:
-        Target: ext-codespaces
+      ext-change-analysis:
+        Target: ext-change-analysis
+      ext-cli-translator:
+        Target: ext-cli-translator
+      ext-cloudservice:
+        Target: ext-cloudservice
+      ext-communication:
+        Target: ext-communication
+      ext-confidentialledger:
+        Target: ext-confidentialledger
+      ext-confluent:
+        Target: ext-confluent
       ext-connectedk8s:
         Target: ext-connectedk8s
       ext-connectedmachine:
         Target: ext-connectedmachine
+      ext-connectedvmware:
+        Target: ext-connectedvmware
+      ext-connection-monitor-preview:
+        Target: ext-connection-monitor-preview
+      ext-containerapp:
+        Target: ext-containerapp
+      ext-containerapp-preview:
+        Target: ext-containerapp-preview
+      ext-cosmosdb-preview:
+        Target: ext-cosmosdb-preview
       ext-costmanagement:
         Target: ext-costmanagement
       ext-csvmware:
@@ -197,8 +230,14 @@ jobs:
         Target: ext-databox
       ext-databricks:
         Target: ext-databricks
+      ext-datadog:
+        Target: ext-datadog
       ext-datafactory:
         Target: ext-datafactory
+      ext-datamigration:
+        Target: ext-datamigration
+      ext-dataprotection:
+        Target: ext-dataprotection
       ext-datashare:
         Target: ext-datashare
       ext-db-up:
@@ -209,44 +248,68 @@ jobs:
         Target: ext-desktopvirtualization
       ext-dev-spaces:
         Target: ext-dev-spaces
+      ext-diskpool:
+        Target: ext-diskpool
       ext-dms-preview:
         Target: ext-dms-preview
+      ext-dnc:
+        Target: ext-dnc
+      ext-dns-resolver:
+        Target: ext-dns-resolver
+      ext-dynatrace:
+        Target: ext-dynatrace
+      ext-edgeorder:
+        Target: ext-edgeorder
+      ext-elastic:
+        Target: ext-elastic
+      ext-elastic-san:
+        Target: ext-elastic-san
       ext-eventgrid:
         Target: ext-eventgrid
-      ext-express-route:
-        Target: ext-express-route
       ext-express-route-cross-connection:
         Target: ext-express-route-cross-connection
+      ext-fleet:
+        Target: ext-fleet
+      ext-fluid-relay:
+        Target: ext-fluid-relay
       ext-footprint:
         Target: ext-footprint
       ext-front-door:
         Target: ext-front-door
       ext-fzf:
         Target: ext-fzf
+      ext-functionapp:
+        Target: ext-functionapp
       ext-guestconfig:
         Target: ext-guestconfig
       ext-hack:
         Target: ext-hack
       ext-hardware-security-modules:
         Target: ext-hardware-security-modules
+      ext-healthbot:
+        Target: ext-healthbot
       ext-healthcareapis:
         Target: ext-healthcareapis
       ext-hpc-cache:
         Target: ext-hpc-cache
       ext-image-copy-extension:
         Target: ext-image-copy-extension
+      ext-image-gallery:
+        Target: ext-image-gallery
       ext-import-export:
         Target: ext-import-export
+      ext-init:
+        Target: ext-init
       ext-interactive:
         Target: ext-interactive
       ext-internet-analyzer:
         Target: ext-internet-analyzer
       ext-ip-group:
         Target: ext-ip-group
-      ext-k8sconfiguration:
-        Target: ext-k8sconfiguration
-      ext-keyvault-preview:
-        Target: ext-keyvault-preview
+      ext-k8s-configuration:
+        Target: ext-k8s-configuration
+      ext-k8s-extension:
+        Target: ext-k8s-extension
       ext-kusto:
         Target: ext-kusto
       ext-log-analytics:
@@ -255,6 +318,8 @@ jobs:
         Target: ext-log-analytics-solution
       ext-logic:
         Target: ext-logic
+      ext-logz:
+        Target: ext-logz
       ext-maintenance:
         Target: ext-maintenance
       ext-managementpartner:
@@ -263,24 +328,60 @@ jobs:
         Target: ext-mesh
       ext-mixed-reality:
         Target: ext-mixed-reality
+      ext-monitor-control-service:
+        Target: ext-monitor-control-service
       ext-netappfiles-preview:
         Target: ext-netappfiles-preview
+      ext-network-manager:
+        Target: ext-network-manager
+      ext-next:
+        Target: ext-next
+      ext-nginx:
+        Target: ext-nginx
       ext-notification-hub:
         Target: ext-notification-hub
+      ext-offazure:
+        Target: ext-offazure
+      ext-orbital:
+        Target: ext-orbital
       ext-peering:
         Target: ext-peering
       ext-portal:
         Target: ext-portal
       ext-powerbidedicated:
         Target: ext-powerbidedicated
-      ext-privatedns:
-        Target: ext-privatedns
+      ext-providerhub:
+        Target: ext-providerhub
+      ext-purview:
+        Target: ext-purview
+      ext-quantum:
+        Target: ext-quantum
+      ext-quota:
+        Target: ext-quota
+      ext-rdbms-connect:
+        Target: ext-rdbms-connect
+      ext-redisenterprise:
+        Target: ext-redisenterprise
+      ext-reservation:
+        Target: ext-reservation
       ext-resource-graph:
         Target: ext-resource-graph
+      ext-resource-mover:
+        Target: ext-resource-mover
       ext-sap-hana:
         Target: ext-sap-hana
+      ext-scenario-guide:
+        Target: ext-scenario-guide
       ext-scheduled-query:
         Target: ext-scheduled-query
+      ext-scvmm:
+        Target: ext-scvmm
+      ext-securityinsight:
+        Target: ext-securityinsight
+      ext-serial-console:
+        Target: ext-serial-console
+      ext-spring:
+        Target: ext-spring
       ext-spring-cloud:
         Target: ext-spring-cloud
       ext-ssh:
@@ -289,8 +390,6 @@ jobs:
         Target: ext-stack-hci
       ext-storage-blob-preview:
         Target: ext-storage-blob-preview
-      ext-storage-or-preview:
-        Target: ext-storage-or-preview
       ext-storage-preview:
         Target: ext-storage-preview
       ext-storagesync:
@@ -301,10 +400,12 @@ jobs:
         Target: ext-subscription
       ext-support:
         Target: ext-support
-      ext-synapse:
-        Target: ext-synapse
+      ext-swiftlet:
+        Target: ext-swiftlet
       ext-timeseriesinsights:
         Target: ext-timeseriesinsights
+      ext-traffic-collector:
+        Target: ext-traffic-collector
       ext-virtual-network-tap:
         Target: ext-virtual-network-tap
       ext-virtual-wan:
@@ -315,11 +416,13 @@ jobs:
         Target: ext-vmware
       ext-webapp:
         Target: ext-webapp
+      ext-webpubsub:
+        Target: ext-webpubsub
   pool:
     name: ${{ variables.ubuntu_pool }}
   steps:
     - bash: |
-        if [[ "$(USER_TARGET)" =~ "$(Target)" || ("$(USER_TARGET)" == "" && ! "$(Target)" =~ ^ext-.*) || ("$(USER_TARGET)" == "extensions" && "$(Target)" =~ ^ext-.*) ]]; then
+        if [[ "$(USER_TARGET)" =~ "$(Target)" || ("$(USER_TARGET)" == "main" && ! "$(Target)" =~ ^ext-.*) || ("$(USER_TARGET)" == "extensions" && "$(Target)" =~ ^ext-.*) || ("$(USER_TARGET)" == "ALL" || "$(USER_TARGET)" == "all" || "$(USER_TARGET)" == "") ]]; then
           echo "Match!"
           echo "##vso[task.setvariable variable=Match]1"
         else
@@ -340,15 +443,23 @@ jobs:
         git config --global user.email "AzurePipelines"
         git config --global user.name "AzurePipelines"
 
+        # print variables
+        echo "USER_TARGET: $(USER_TARGET)"
+        echo "USER_REPO: $(USER_REPO)"
+        echo "USER_REPO_EXT: $(USER_REPO_EXT)"
+        echo "USER_BRANCH: $(USER_BRANCH)"
+        echo "USER_BRANCH_EXT: $(USER_BRANCH_EXT)"
+
         # Whether commit changes
         if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" ]]; then
           REPO="$(USER_REPO)"
+          EXT_REPO="$(USER_REPO_EXT)"
           # Pass username and token so that we can commit changes
           git clone -b $(USER_BRANCH) ${REPO:0:8}$(USER_USERNAME):$(USER_TOKEN)@${REPO:8}
-          git clone https://github.com/Azure/azure-cli-extensions.git
+          git clone -b $(USER_BRANCH_EXT) ${EXT_REPO:0:8}$(USER_USERNAME):$(USER_TOKEN)@${EXT_REPO:8}
         else
           git clone -b $(USER_BRANCH) $(USER_REPO)
-          git clone https://github.com/Azure/azure-cli-extensions.git
+          git clone -b $(USER_BRANCH_EXT) $(USER_REPO_EXT)
         fi
 
         python -m venv env
@@ -359,7 +470,7 @@ jobs:
         # pip install -e azure-cli-dev-tools
         pip install pytest-json-report
         pip install pytest-html
-        pip install pytest-rerunfailures==11.0
+        pip install pytest-rerunfailures
 
         azdev setup -c azure-cli -r azure-cli-extensions
 
@@ -400,12 +511,18 @@ jobs:
         pwd
         ls
         # Whether commit changes
-        if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" ]]; then
+        if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" && ! "$(USER_TARGET)" =~ ^ext-.* && "$(USER_TARGET)" != "extensions" ]]; then
           cd azure-cli
           git status
           git add .
           git commit -m "Upload recording files"
           git push origin $(USER_BRANCH)
+        elif [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" && ("$(USER_TARGET)" =~ ^ext-.* || "$(USER_TARGET)" == "extensions") ]]; then
+          cd azure-cli-extensions
+          git status
+          git add .
+          git commit -m "Upload recording files"
+          git push origin $(USER_BRANCH_EXT)
         fi
 
       condition: and(succeededOrFailed(), eq(variables.Match, '1'))
@@ -486,7 +603,7 @@ jobs:
         echo "set account"
         az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
         echo "clean resource"
-        if [[ "$(USER_LIVE)" == "--live" && "$(USER_TARGET)" == "" ]]; then
+        if [[ "$(USER_LIVE)" == "--live" && ("$(USER_TARGET)" == "ALL" || "$(USER_TARGET)" == "all" || "$(USER_TARGET)" == "" || "$(USER_TARGET)" == "main" || "$(USER_TARGET)" == "extensions") ]]; then
           python /mnt/vss/_work/1/s/scripts/live_test/clean.py
         fi
 #    - task: AzureCLI@2
