--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,7 +25,7 @@
 /src/azure-cli/azure/cli/command_modules/apim/ @kevinhillinger @jonlester
 /src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @zhoxing-ms @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/appservice/ @panchagnula @jsntcy @zhoxing-ms @yanzhudd
-/src/azure-cli/azure/cli/command_modules/aro/ @bennerv @hawkowl @jewzaam @m1kola @rogbas
+/src/azure-cli/azure/cli/command_modules/aro/ @bennerv @hawkowl @jewzaam @rogbas
 /src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @zhoxing-ms @akshayneema @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @zhoxing-ms @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/batchai/ @AlexanderYukhanov
