Add Image Cleaner support in az-cli

--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -19,6 +19,9 @@ aks create:
       disable_snapshot_controller:
           rule_exclusions:
           - option_length_too_long
+      image_cleaner_interval_hours:
+          rule_exclusions:
+          - option_length_too_long    
 
 aks enable-addons:
   parameters:
@@ -54,4 +57,7 @@ aks update:
       disable_snapshot_controller:
           rule_exclusions:
           - option_length_too_long
+      image_cleaner_interval_hours:
+          rule_exclusions:
+          - option_length_too_long    
 ...
