--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -4,6 +4,9 @@ aks create:
       appgw_watch_namespace:
           rule_exclusions:
           - option_length_too_long
+      enable_workload_identity:
+          rule_exclusions:
+          - option_length_too_long
       enable_sgxquotehelper:
           rule_exclusions:
           - option_length_too_long
@@ -34,6 +37,9 @@ aks enable-addons:
 aks update:
   parameters:
       disable_secret_rotation:
+          rule_exclusions:
+          - option_length_too_long
+      enable_workload_identity:
           rule_exclusions:
           - option_length_too_long
       load_balancer_managed_outbound_ipv6_count:
