--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -7,6 +7,9 @@ aks create:
       enable_workload_identity:
           rule_exclusions:
           - option_length_too_long
+      disable_workload_identity:
+          rule_exclusions:
+          - option_length_too_long
       enable_sgxquotehelper:
           rule_exclusions:
           - option_length_too_long
@@ -40,6 +43,9 @@ aks update:
           rule_exclusions:
           - option_length_too_long
       enable_workload_identity:
+          rule_exclusions:
+          - option_length_too_long
+      disable_workload_identity:
           rule_exclusions:
           - option_length_too_long
       load_balancer_managed_outbound_ipv6_count:
