--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_mi_server_configuration_options.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_mi_server_configuration_options.yaml
@@ -561,7 +561,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option create
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       Content-Length:
@@ -615,7 +615,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option create
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       ParameterSetName:
@@ -661,7 +661,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option create
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       ParameterSetName:
@@ -799,7 +799,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option update
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       ParameterSetName:
@@ -845,7 +845,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option update
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       Content-Length:
@@ -899,7 +899,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option update
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       ParameterSetName:
@@ -945,7 +945,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - sql mi server-configuration-option update
+      - sql mi server-configuration-option set
       Connection:
       - keep-alive
       ParameterSetName:
